# asr_gen_subtitles

./: .env.example  .gitignore  CLAUDE.md  README.md  api.py  main.py  pyproject.toml
asr/: __init__.py  config.py  engine.py  model_path.py  pipeline.py  platform.py  subtitle.py  text_utils.py
static/: index.html
