[project]
name = "asr"
version = "0.1.0"
description = "Multi-stage ASR subtitle generation pipeline with Qwen3-ASR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.12.1",
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
    "modelscope>=1.35.4",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0.0",
    "qwen-asr",
]
mlx = [
    "mlx-audio",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
asr = "main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
